--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body{
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   background: #FFF2C8;
+  overflow: hidden;
 }
 
 p, h1, h2, h3, h4, h5 {
