--- a/src/components/HomeIcon.css
+++ b/src/components/HomeIcon.css
@@ -1,5 +1,20 @@
-#home-icon {
+#home-icon-holder {
     position: absolute;
+    width: 3em;
     top: 2%;
     left: 2%;
+    text-decoration:  none;
+}
+
+#home-icon-holder > p {
+    color: black;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.home-icon {
+    width: 100%;
+    height: 2.5em;
+    fill: #FF7A00;
+    margin: 0 auto;
 }
