--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,8 @@
 .center {
     width: 100%;
     margin: 0 auto;
-    text-align:center
+    text-align:center;
+    font-family: Gotham;
 }
 
 .home-div {
