--- a/src/pages/CourseForum.css
+++ b/src/pages/CourseForum.css
@@ -13,3 +13,57 @@
     left: 46px;
     top: 330px;
 }
+
+.forum {
+    width: 70%;
+    left: 400px;
+    top: 100px;
+}
+
+.list {
+    height: 70%;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.text {
+    font-family: Gotham;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    color: #616161;
+    text-align: center;
+    padding-top: 1.3em;
+    display: inline-block;
+    position: absolute;
+}
+
+.vote {
+    left: 1em;
+    
+}
+.answer {
+    left: 5.5em;
+}
+
+.view {
+    left: 11.5em;
+}
+
+.question {
+    font-family: Gotham;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 26px;
+    color: #000000;
+    left: 14em;
+    padding-top: 0.8em;
+    position: absolute;
+}
+
+.br { 
+    display: block; 
+    margin-bottom: 0.7em; 
+}
