--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -60,17 +60,15 @@
 }
 
 .home-placeholder {
-    position: absolute;
-    width: 271px;
-    height: 368.94px;
-    top: 372px;
+    width: 260px;
+    margin-top: 5em !important;
 }
 
 .home-placeholder.search {
-    width: 271px;
-    height: 368.94px;
-    left: 46px;
-    top: 330px;
+    width: 260px;
+    position: fixed;
+    bottom: 1em;
+    left: 1em;
     animation: fadein 2s;
 }
 
@@ -84,7 +82,7 @@
 }
 .module-list-holder {
     display: none;
-    width: 70%;
+    width: calc(90% - 260px);
 }
 
 .module-list-holder.search {
@@ -94,16 +92,14 @@
 
 .sidebar {
     display: none;
-    width: 20%;
+    width: 260px;
     float: left;
 }
 
 .sidebar.search {
     display: block;
     animation: fadein 1s;
-    top: 180px;
-    left: 37px;
-    position: absolute;
+    margin: 1em 0 0 1em;
 }
 
 .sidebar.rating {
@@ -115,11 +111,11 @@
 @media only screen and (max-width: 600px) {
     .input-holder {
         width: 90%;
-        margin-top: 3em;
+        margin-top: 8em;
     }
 
     .input-holder.search {
-        margin-top: 8em;
+        margin-top: 5em;
         animation: slideUpMobile 0.7s;
     }
 
@@ -133,6 +129,25 @@
 
     .home-placeholder.search {
         display: none;
+    }
+
+    .sidebar.search {
+        width: 2em;
+        margin: 2em 0 0 0.5em;
+    }
+
+    .sidebar-item-holder p {
+        display: none;
+    }
+
+    .sidebar-item-holder svg {
+        top: 0;
+        left: 0;
+    }
+
+    .module-list-holder {
+        width: calc(90% - 2em);
+        margin: 2em 0 auto auto;
     }
 }
 
@@ -153,6 +168,6 @@
 }
 
 @keyframes slideUpMobile {
-    from { margin-top: 14em; }
-    to   { margin-top: 8em; }
+    from { margin-top: 18em; }
+    to   { margin-top: 5em; }
 }
