--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,14 +1,8 @@
-.center {
-    width: 100%;
-    margin: 0 auto;
-    text-align:center;
-    font-family: Gotham;
-}
-
 .input-holder {
-    width: 60%;
+    width: 60% !important;
     position: relative;
-    margin-top: 3em;
+    text-align:center;
+    margin: 10em auto 0 auto;
 
     transition-property: all;
     transition-duration: 0.7s;
@@ -16,19 +10,61 @@
 }
 
 
+.input-holder.search {
+    margin-top: 3em;
+    animation: slideUp 0.7s;
+}
+
 .search-icon {
     position: absolute;
     height: 2em;
     width: 2em;
-    left: 1em;
-    top: 0.5em;
+    left: 1.5em;
+    top: 1em;
     fill: #FF7A00;
 }
 
 #course-search {
     width: 100%;
     border: 1px lightgrey solid;
-    border-radius: 25px;
-    padding: 1.2em 1em;
+    border-radius: 5em;
+    padding: 1em;
     color: #FF7A00;
+    font-size: 1.2em;
+}
+
+@media only screen and (max-width: 600px) {
+    .input-holder {
+        width: 90%;
+        margin-top: 8em;
+    }
+
+    .input-holder.search {
+        margin-top: 5em;
+        animation: slideUpMobile 0.7s;
+    }
+
+    #course-search {
+        width: 90%;
+    }
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+@keyframes fadeout {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
+
+@keyframes slideUp {
+    from { margin-top: 21em; }
+    to   { margin-top: 3em; }
+}
+
+@keyframes slideUpMobile {
+    from { margin-top: 18em; }
+    to   { margin-top: 5em; }
 }
