--- a/src/pages/AskQuestion.css
+++ b/src/pages/AskQuestion.css
@@ -1,16 +1,20 @@
 .form {
-    top: 10em;
-    left: 25em;
-    width: 900px;
-    height: 400px;
+    width: 70%;
+    height: auto;
+    margin: 2% auto;
     padding: 2em 2em;
     background-color: #FFF8E0;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: absolute;
 }
 
 .form > input {
     height: 2em;
+    width: 100%;
+}
+
+.form > textarea {
+    width: 100%;
+    resize: none;
 }
 
 .question-title-body {
@@ -19,9 +23,10 @@
 }
 
 .avatar {
-    margin-left: 3em;
-    margin-top: 7em;
-    size: 70%;
+    position: fixed;
+    bottom: 1%;
+    left: 1%;
+    width: 10%;
 }
 
 .br{
@@ -40,6 +45,33 @@
 }
 
 .camera {
-    left: 15em;
+    float: right;
+    margin: 0 1% 0 0
+}
+
+.discard-modal {
+    position: relative;
+    padding: 1em;
+}
+
+.discard-modal-header {
+    font-weight: 600;
+    font-size: 1.2em;
+}
+
+.discard-modal-content {
+    margin-top: 1em;
+}
+
+.discard-modal-button {
+    margin: 1% auto 0 3% !important;
+}
+
+.close-modal {
     position: absolute;
+    right: 0.25em;
+    top: 0.25em;
+    padding-right: 0.5em;
+    cursor: pointer;
+    font-size: 1.5em;
 }
