Edit Module list, Course Review Card, and Add button

--- a/src/components/CourseReviewCard.css
+++ b/src/components/CourseReviewCard.css
@@ -122,3 +122,11 @@
     margin-right: 3em;
     margin-top: 0.3em;
 }
+
+.course-review-card-detail-date {
+
+}
+
+.course-review-card-detail-description {
+    margin-top: 1em;
+}
