--- a/src/components/CourseReviewCard.css
+++ b/src/components/CourseReviewCard.css
@@ -7,7 +7,6 @@
 .course-review-card-section-odd {
     position: relative;
     background: rgba(255,165,0,0.2);
-    width: 90%;
     height: 73px;
 }
 
@@ -70,7 +69,7 @@
     display: inline-block;
     position: relative;
     top: -30px;
-    width: 40px;
+    padding: 0.5%;
     height: 33px;
 }
 
