--- a/src/components/CourseReviewCard.css
+++ b/src/components/CourseReviewCard.css
@@ -4,6 +4,10 @@
     height: 73px;
 }
 
+.course-review-card-section p {
+    color: black;
+}
+
 .course-review-card-section:nth-child(odd) {
     background-color: rgba(255,165,0,0.2);
 }
@@ -24,55 +28,51 @@
 
 .course-review-card-review {
     display: inline-block;
-    position: relative;
-    top: -12px;
-    width: 400px;
-    height: 33px;
-    margin-left: 10px;
+    width: 60%;
+    height: 73px;
+    margin: 0 0 0 1%;
+    vertical-align: middle;
+    white-space: nowrap;
     overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .course-review-card-date {
     display: inline-block;
-    position: relative;
-    top: -30px;
     width: 120px;
-    height: 33px;
-    margin-left: 30em;
+    height: 83px;
+    margin: 0 0 0 1%;
+    vertical-align: middle;
 }
 
 .course-review-card-like-symbol {
     display: inline-block;
-    position: relative;
-    margin-left: 25px;
-    top: -25px;
     width: 20px;
-    height: 20px;
+    height: 73px;
+    margin: 0 0 0 1%;
 }
 
 .course-review-card-like-number {
     display: inline-block;
-    position: relative;
-    margin-left: 5px;
-    top: -30px;
     width: 80px;
-    height: 33px;
+    height: 83px;
+    margin: 0 0 0 1%;
+    vertical-align: middle;
 }
 
 .course-review-card-rating-number {
     display: inline-block;
-    position: relative;
-    top: -30px;
     padding: 0.5%;
-    height: 33px;
+    height: 83px;
+    margin: 0 0 0 1%;
+    vertical-align: middle;
 }
 
 .course-review-card-rating-symbol {
     display: inline-block;
-    position: relative;
-    top: -25px;
     width: 25px;
-    height: 25px;
+    height: 73px;
+    margin: 0 0 0 1%;
 }
 
 .course-review-card-detail {
