--- a/src/components/CourseReviewCard.css
+++ b/src/components/CourseReviewCard.css
@@ -1,7 +1,8 @@
 .course-review-card-section {
     position: relative;
-    width: 90%;
+    width: 100%;
     height: 73px;
+    overflow: hidden;
 }
 
 .course-review-card-section p {
@@ -54,7 +55,7 @@
 
 .course-review-card-like-number {
     display: inline-block;
-    width: 80px;
+    width: 4%;
     height: 83px;
     margin: 0 0 0 1%;
     vertical-align: middle;
@@ -72,7 +73,6 @@
     display: inline-block;
     width: 25px;
     height: 73px;
-    margin: 0 0 0 1%;
 }
 
 .course-review-card-detail {
