--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body{
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   background: #FFF2C8;
+  margin: 0;
   overflow: visible;
 }
 
