--- a/src/components/CourseReviewCard.css
+++ b/src/components/CourseReviewCard.css
@@ -1,7 +1,7 @@
 .course-review-card-section {
     position: relative;
     width: 100%;
-    height: 73px;
+    height: 100px;
     overflow: hidden;
 }
 
@@ -27,21 +27,43 @@
     background: #575757;
 }
 
+.card-title-holder {
+    width: 60%;
+    float: left;
+}
+
+.course-review-card-title {
+    display: inline-block;
+    width: 100%;
+    height: 30px;
+    vertical-align: middle;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 1% 0 0 1%;
+    font-weight: 700;
+}
+
 .course-review-card-review {
     display: inline-block;
-    width: 60%;
-    height: 73px;
+    width: 100%;
+    height: 50px;
     margin: 0 0 0 1%;
-    vertical-align: middle;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
+.card-review-holder {
+    width: 35%;
+    float:right;
+}
+
 .course-review-card-date {
     display: inline-block;
     width: 120px;
-    height: 83px;
+    height: 100px;
+    line-height: 100px;
     margin: 0 0 0 1%;
     vertical-align: middle;
 }
@@ -49,14 +71,16 @@
 .course-review-card-like-symbol {
     display: inline-block;
     width: 20px;
-    height: 73px;
+    height: 100px;
+    vertical-align: top;
     margin: 0 0 0 1%;
 }
 
 .course-review-card-like-number {
     display: inline-block;
     width: 4%;
-    height: 83px;
+    height: 100px;
+    line-height: 100px;
     margin: 0 0 0 1%;
     vertical-align: middle;
 }
@@ -64,23 +88,26 @@
 .course-review-card-rating-number {
     display: inline-block;
     padding: 0.5%;
-    height: 83px;
-    margin: 0 0 0 1%;
+    height: 100px;
+    line-height: 100px;
+    margin: 0 0 0 2em;
     vertical-align: middle;
 }
 
 .course-review-card-rating-symbol {
     display: inline-block;
     width: 25px;
-    height: 73px;
+    height: 100px;
+    vertical-align: top;
 }
 
 .course-review-card-detail {
     background: #FFF2C8;
+    padding: 1em;
 }
 
 .course-review-card-detail-title {
-    display: inline-block;
+    display: inline;
     font-size: xx-large;
     font-weight: bold;
 }
@@ -92,8 +119,8 @@
 
 .course-review-card-detail-like-symbol {
     display: inline-block;
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
     float: right;
     margin-top: 0.3em;
     margin-right: 3em;
@@ -109,17 +136,19 @@
 
 .course-review-card-detail-rating-symbol {
     display: inline-block;
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
     float: right;
-    margin-right: 3em;
+    margin-right: 1em;
     margin-top: 0.3em;
 }
 
 .course-review-card-detail-date {
-
+    margin-top: 1em;
+    color: black;
 }
 
 .course-review-card-detail-description {
     margin-top: 1em;
+    color: black;
 }
