--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -109,14 +109,18 @@
     }
 
     .sidebar-item-holder svg {
-        top: 0;
-        left: 0;
+        left: 0.5em;
+    }
+
+    .sidebar-item-holder-active {
+        width:3em;
     }
 
     .module-list-holder {
         width: calc(90% - 2em);
         margin: 2em 0 auto auto;
     }
+
 }
 
 
